030-software/fluxcd/apps/comics/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 5050
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app: api
