030-software/fluxcd/apps/comics/api/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  hostnames:
  - api.comics.${domain}
  parentRefs:
  - name: comics
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: api
  rules:
  - backendRefs:
    - name: api
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - cors:
        allowOrigins:
        - https://preview.comics.${domain}
        - https://dev.comics.${domain}
        - https://comics.${domain}
        - https://preview.bubbles.${domain}
        - https://dev.bubbles.${domain}
        - https://bubbles.${domain}
        allowMethods:
        - GET
        - OPTIONS
        allowHeaders:
        - DNT
        - X-CustomHeader
        - Keep-Alive
        - User-Agent
        - X-Requested-With
        - If-Modified-Since
        - Cache-Control
        - Content-Type
        allowCredentials: false
        maxAge: 3600
      type: CORS
